--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <title>Hubspot Clone</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/images/favicon-96x96.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <header class="hubspot-header">
+            <div class="img-container">
+                <img src="images/hubspot-header-logo.webp" alt="hubspot-logo" class="img-itself">
+            </div>
+            <ul class="header-list">
+                <li class="list-items"><a href="#" class="list-items-link">Get started free</a></li>
+                <li class="list-items"><a href="#" class="list-items-link">Get a demo</a></li>
+            </ul>
+        </header>
+    </div>
 </body>
 </html>
