this is how i made the header before watching teh walkthrough

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    
         <header class="hubspot-header">
             <div class="img-container">
                 <img src="images/hubspot-header-logo.webp" alt="hubspot-logo" class="img-itself">
             </div>
             <ul class="header-list">
-                <li class="list-items"><a href="#" class="list-items-link">Get started free</a></li>
-                <li class="list-items"><a href="#" class="list-items-link">Get a demo</a></li>
+                <li class="list-items list-background"><a href="#" class="list-items-link get-started-header">Get started free</a></li>
+                <li class="list-items"><a href="#" class="list-items-link get-demo-header">Get a demo</a></li>
             </ul>
         </header>
-    </div>
+        <div class="container"></div>
+    
 </body>
 </html>
