--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <img src="images/hubspot-header-logo.webp" alt="hubspot-logo" class="img-itself">
             </div>
             <ul class="header-list">
-                <li class="list-items list-background"><a href="#" class="list-items-link get-started-header">Get started free</a></li>
-                <li class="list-items"><a href="#" class="list-items-link get-demo-header">Get a demo</a></li>
+                <li class="list-items list-background-get-started"><a href="#" class="list-items-link get-started-header">Get started free</a></li>
+                <li class="list-items list-background-demo"><a href="#" class="list-items-link get-demo-header">Get a demo</a></li>
             </ul>
         </header>
         <div class="container"></div>
