--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
                 </ul>
             </header>
         </div>
+        <section class="showcase-container">
+            <div class="container">
+                <div class="showcase-content-container">
+                    <div class="showcase-text-container">
+                        <h1 class="showcase-header">Free CRM Software That Grows With Your Buisness</h1>
+                        <p class="subheading-header">Hubspot Smart CRM has free tools to connect your data, teams, and customers all on one platform. 
+                            Seamlessly unify your marketing, sales, and service teams with our AI-powered solution.</p>
+                             <ul class="header-list">
+                    <li class="list-items list-background-get-started"><a href="#" class="list-items-link get-started-header">Get started free</a></li>
+                    <li class="list-items list-background-demo"><a href="#" class="list-items-link get-demo-header">Get a demo</a></li>
+                </ul>
+                <p class="cta-text">Get started with free tools, or get a demo of our premium software.</p>
+                    </div>
+                    <div class="showcase-img-container">
+                        <img src="images/showcase-img.webp" alt="showcase image" class="image-itself">
+                    </div>
+                </div>
+            </div>
+        </section>
        
     
 </body>
