made minor media query changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <h1 class="showcase-header">Free CRM Software That Grows With Your Buisness</h1>
                         <p class="subheading-header">Hubspot Smart CRM has free tools to connect your data, teams, and customers all on one platform. 
                             Seamlessly unify your marketing, sales, and service teams with our AI-powered solution.</p>
-                             <ul class="header-list">
+                             <ul class="header-list showcase-header-list">
                     <li class="list-items list-background-get-started"><a href="#" class="list-items-link get-started-header">Get started free</a></li>
                     <li class="list-items list-background-demo"><a href="#" class="list-items-link get-demo-header">Get a demo</a></li>
                 </ul>
