made the site moible responsive

--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
                         <img src="images/showcase-img.webp" alt="showcase image" class="image-itself-header">
                     </div>
                 </div>
-                <div class="logo-section">
+            </div>
+        </section>
+         <div class="logo-section">
                     <div class="logo-text">
                         238,000+ customers in over 135 countries grow their businesses with HubSpot
                     </div>
                     <div class="img-container">
                         <img src="images/doordash-logo.png" alt="doordash" class="image-itself">
-                        <img src="images/ebay-logo.png" alt="doordash" class="image-itself">
-                        <img src="images/trip-advisor-logo.png" alt="doordash" class="image-itself">
-                        <img src="images/reddit-logo.png" alt="doordash" class="image-itself">
-                        <img src="images/weightwatchers-logo.png" alt="doordash" class="image-itself">
+                        <img src="images/ebay-logo.png" alt="ebay" class="image-itself">
+                        <img src="images/trip-advisor-logo.png" alt="trip advisor" class="image-itself">
+                        <img src="images/reddit-logo.png" alt="reddit" class="image-itself">
+                        <img src="images/weightwatchers-logo.png" alt="weightwatchers" class="image-itself">
                     </div>
                 </div>
-            </div>
-        </section>
        
     
 </body>
