i messed up the columns so i need to make this commit to reverse them to the previous one bfore this one

--- a/index.html
+++ b/index.html
@@ -68,16 +68,18 @@
                                 recommendations will harness in-the-moment insights to offer suggestions for the next best action to take.</p>
                                 <p class="features-link-text"><a href="#" class="features-link">Get started</a></p>
                     </div>
-                    <div class="text-feature-content">
-                        <h1 class="text-feature-header">Stop letting leads slip through the cracks</h1>
-                        <p class="text-feature-description">   HubSpot’s free Smart CRM comes with tools for lead generation and email marketing, so you can grow and
-                        nurture your database — not just organize it. Gone are the days of digging through a messy inbox or complicated spreadsheet to see where a relationship 
-                        left off. Go beyond names and job titles and store every interaction with leads in a
-                        tidy timeline.</p>
-                        <p class="features-link-text"><a href="#" class="features-link">Get started</a></p>
-                    </div>
-                    <div class="img-container-features">
-                        <img src="images/new-batch-email.webp" alt="clear view" class="features-img">
+                    <div class="reverse-flex">
+                        <div class="text-feature-content">
+                            <h1 class="text-feature-header">Stop letting leads slip through the cracks</h1>
+                            <p class="text-feature-description">   HubSpot’s free Smart CRM comes with tools for lead generation and email marketing, so you can grow and
+                            nurture your database — not just organize it. Gone are the days of digging through a messy inbox or complicated spreadsheet to see where a relationship
+                            left off. Go beyond names and job titles and store every interaction with leads in a
+                            tidy timeline.</p>
+                            <p class="features-link-text"><a href="#" class="features-link">Get started</a></p>
+                        </div>
+                        <div class="img-container-features-flex">
+                            <img src="images/new-batch-email.webp" alt="clear view" class="features-img">
+                        </div>
                     </div>
                     <div class="img-container-features">
                         <img src="images/level-up.webp" alt="clear view" class="features-img">
