completed the youtube desktop version. Need to do the moible response for it

--- a/index.html
+++ b/index.html
@@ -101,6 +101,39 @@
                 </div>
             </div>
         </section>
+        <div class="container">
+            <section class="yt-vids">
+                <h2 class="logo-text">See how buisnesses like yours use HubSpot to grow better</h2>
+                <div class="yt-vid-container">
+                    <div class="yt-video">
+                        <iframe width="600" height="300" src="https://www.youtube.com/embed/vLSEY3ieswY" 
+                        title="What is HubSpot | The Ultimate Marketing &amp; Sales Tool" frameborder="0"
+                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <p class="vid-caption">Marketing</p>
+                    </div>
+                    <div class="yt-video">
+                        <iframe width="600" height="300" src="https://www.youtube.com/embed/Ihu9rr1wRa0" 
+                        title="HubSpot CRM Tutorial for Beginners" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <p class="vid-caption">Hubspot CRM Tutorial</p>
+                    </div>
+                    <div class="yt-video">
+                        <iframe width="600" height="300" src="https://www.youtube.com/embed/GnIREMgz-SQ" title="What is HubSpot?" 
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <p class="vid-caption">What is it</p>
+                    </div>
+                    <div class="yt-video">
+                        <iframe width="600" height="300s" src="https://www.youtube.com/embed/gIvx6MjLQMI" title="HubSpot – Is It Still Worth It in 2026?" 
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <p class="vid-caption">hubspot in 2026</p>
+                    </div>
+                </div>
+            </section>
+        </div>
        
     
 </body>
