completed the moible response for the youtube section

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
                         <iframe width="600" height="300" src="https://www.youtube.com/embed/GnIREMgz-SQ" title="What is HubSpot?" 
                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <p class="vid-caption">What is it</p>
+                        <p class="vid-caption">What is HubSpot?</p>
                     </div>
                     <div class="yt-video">
                         <iframe width="600" height="300s" src="https://www.youtube.com/embed/gIvx6MjLQMI" title="HubSpot – Is It Still Worth It in 2026?" 
                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <p class="vid-caption">hubspot in 2026</p>
+                        <p class="vid-caption">Hubspot in 2026</p>
                     </div>
                 </div>
             </section>
