completed the footer section, need to do the moible response part

--- a/index.html
+++ b/index.html
@@ -133,7 +133,36 @@
                 </div>
             </section>
         </div>
-       
+       <footer>
+        <div class="container">
+            <div class="footer-content-container">
+                <div class="footer-text">
+                    <h2 class="footer-header">Simplify pipeline management with HubSpot's free smart CRM</h2>
+                    <p class="footer-text-p">Seamlessly connect your data, teams and customers.</p>
+                     <ul class="header-list footer-list">
+                    <li class="list-items-footer list-background-get-started-footer"><a href="#" class="list-items-link-footer get-started-header-footer">Get started free</a></li>
+                    <li class="list-items-footer list-background-demo-footer"><a href="#" class="list-items-link-footer get-demo-header-footer">Get a demo</a></li>
+                </ul>
+                <p class="footer-more-info">For more deatailed information on pricing, our free tools, and premium products, please see our 
+                    <a href="#" class="footer-link">Pricing Page</a>.</p>
+                </div>
+                <div class="footer-img-container">
+                    <img src="/images/footer-image.webp" alt="footer img" class="footer-img">
+                </div>
+            </div>
+            <div class="footer-copyright">Copyright 2026 Hubspot, Inc</div>
+            <div class="white-links">
+                <ul class="footer-white-links">
+                    <li class="white-link-list-item"><a href="#" class="footer-white-link-anchor">Legal Stuff</a></li>
+                     <li class="white-link-list-item"><a href="#" class="footer-white-link-anchor">Privacy Policy</a></li>
+                      <li class="white-link-list-item"><a href="#" class="footer-white-link-anchor">Security</a></li>
+                       <li class="white-link-list-item"><a href="#" class="footer-white-link-anchor">Website Accessibility</a></li>
+                        <li class="white-link-list-item"><a href="#" class="footer-white-link-anchor">Manage Cookes</a></li>
+                         <li class="white-link-list-item"><a href="#" class="footer-white-link-anchor">Your Privacy Choices</a></li>
+                </ul>
+            </div>
+        </div>
+       </footer>
     
 </body>
 </html>
